--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-three/eslint-plugin": "^0.1.1",
     "@react-three/fiber": "^8.17.7",
     "@types/three": "^0.168.0",
+    "pocketbase": "^0.21.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.168.0"
+    "three": "^0.168.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
